--- a/.coveragerc
+++ b/.coveragerc
@@ -1,7 +1,7 @@
 [run]
 omit = 
-    /*/tests/*
-    /*/unittesting/core/*
+    */tests/*
+    */unittesting/core/*
 
 [report]
 ignore_errors = True
