--- a/actions/setup/action.yaml
+++ b/actions/setup/action.yaml
@@ -89,7 +89,7 @@ runs:
         . $GITHUB_ACTION_PATH/../../scripts/utils.sh
 
         # Copy plugin files to Packages/<Package> folder if files are checked out.
-        if [ "${{ inputs.install-unittesting }}" = "true" ]; then
+        if [ "${{ inputs.install-package }}" = "true" ]; then
           if [ -d "./.git" ] && [ ! -d "$SUBLIME_TEXT_PACKAGES/$PACKAGE" ]; then
               # symlink does not play well with coverage
               echo "copy the package to sublime package directory"
