--- a/actions/setup/action.yaml
+++ b/actions/setup/action.yaml
@@ -106,10 +106,12 @@ runs:
         bash $GITHUB_ACTION_PATH/../../scripts/block_ip.sh
       shell: bash
     - run: |
-        PACKAGE="${{ inputs.package-name }}"
-        PACKAGE="${PACKAGE:-${GITHUB_REPOSITORY#*/}}"
-
         . $GITHUB_ACTION_PATH/../../scripts/utils.sh
+        REPO="$(gitRemoteURL)"
+        REPO="${REPO:-$GITHUB_REPOSITORY}"
+        PACKAGE="${{ inputs.package-name }}"
+        PACKAGE="${PACKAGE:-${REPO#*/}}"
+
 
         # Copy plugin files to Packages/<Package> folder if files are checked out.
         if [ "${{ inputs.install-package }}" = "true" ]; then
@@ -155,8 +157,11 @@ runs:
         pwsh $Env:GITHUB_ACTION_PATH/../../scripts/install_package_control.ps1 --verbose
       shell: pwsh
     - run: |
+        . $GITHUB_ACTION_PATH/../../scripts/utils.sh
+        REPO="$(gitRemoteURL)"
+        REPO="${REPO:-$GITHUB_REPOSITORY}"
         PACKAGE="${{ inputs.package-name }}"
-        PACKAGE="${PACKAGE:-${GITHUB_REPOSITORY#*/}}"
+        PACKAGE="${PACKAGE:-${REPO#*/}}"
 
         if [ "${{ inputs.install-package }}" = "true" ]; then
           # package control may have updated the checked out repo, we need to restore it
