--- a/actions/setup/action.yaml
+++ b/actions/setup/action.yaml
@@ -110,17 +110,16 @@ runs:
         bash $GITHUB_ACTION_PATH/../../scripts/block_ip.sh
       shell: bash
     - run: |
-        cd "${{ inputs.package-path }}"
         REPO="$GITHUB_REPOSITORY"
         if [ "${{ inputs.install-package }}" = "true" ]; then
+          cd "${{ inputs.package-path }}"
           REMOTEURL=$(git config --get remote.origin.url || true)
-          if [[ "REMOTEURL" =~ ^https://github.com/ ]]; then
-            REPO=${${REMOTEURL#https://github.com/}%\.git}
+          cd -
+          if [[ "$REMOTEURL" =~ ^https://github.com/ ]]; then
+            REPO=${REMOTEURL#https://github.com/}
+            REPO=${REPO%\.git}
           fi
         fi
-
-        echo REPO is "$REPO"
-
         PACKAGE_FROM_INPUTS="${{ inputs.package-name }}"
         PACKAGE="${PACKAGE_FROM_INPUTS:-${REPO#*/}}"
 
@@ -132,16 +131,16 @@ runs:
 
         # Copy plugin files to Packages/<Package> folder if files are checked out.
         if [ "${{ inputs.install-package }}" = "true" ]; then
+          cd "${{ inputs.package-path }}"
           if [ -d "./.git" ] && [ ! -d "$SUBLIME_TEXT_PACKAGES/$PACKAGE" ]; then
-              cd "${{ inputs.package-path }}"
               # symlink does not play well with coverage
               echo "copy the package to sublime package directory"
               mkdir -p "$SUBLIME_TEXT_PACKAGES/$PACKAGE"
               cp -r ./ "$SUBLIME_TEXT_PACKAGES/$PACKAGE"
               # detached head will crash package control
               rm -rf "$SUBLIME_TEXT_PACKAGES/$PACKAGE/.git"
-              cd -
           fi
+          cd -
         fi
         if [ "${{ inputs.install-unittesting }}" = "true" ]; then
             InstallPackage "UnitTesting" "https://github.com/SublimeText/UnitTesting" "${{ inputs.unittesting-version }}"
