--- a/actions/setup/action.yaml
+++ b/actions/setup/action.yaml
@@ -46,6 +46,13 @@ inputs:
       or just user/repo@tag if the repo name is the same as the repo name. "@tag" can
       be also be skipped to install the latest tag (assume sem-ver tags are used).
     required: false
+  display:
+    description: |
+      Virtual display used to to open Sublime Text headlessly in Ubuntu. Possible values
+      are "xvfb" and "turbovnc". Turbovnc supports graphic acceleration which may be
+      neccessary in some cases.
+    required: true
+    default: xvfb
 
 runs:
   using: 'composite'
@@ -87,11 +94,27 @@ runs:
       run: |
         sudo bash $GITHUB_ACTION_PATH/../../scripts/install_ubuntu_sys_req.sh
         echo "DISPLAY=:1" >> $GITHUB_ENV
-        sudo cp $GITHUB_ACTION_PATH/../../scripts/xvfb /etc/init.d/xvfb
-        sudo chmod +x /etc/init.d/xvfb
+        if [ "${{ inputs.display }}" = "xvfb" ]; then
+          sudo cp $GITHUB_ACTION_PATH/../../scripts/xvfb /etc/init.d/xvfb
+          sudo chmod +x /etc/init.d/xvfb
+        else
+          sudo apt-get update
+          sudo apt-get install gnome-session
+          wget https://phoenixnap.dl.sourceforge.net/project/turbovnc/2.2.5/turbovnc_2.2.5_amd64.deb
+          sudo dpkg -i turbovnc_2.2.5_amd64.deb
+          echo "/opt/TurboVNC/bin" >> $GITHUB_PATH
+        fi
       shell: bash
     - if: runner.os == 'Linux'
-      run: sudo sh -e /etc/init.d/xvfb start
+      run: |
+        if [ "${{ inputs.display }}" = "xvfb" ]; then
+          sudo sh -e /etc/init.d/xvfb start
+        else
+          mkdir $HOME/.vnc
+          echo $RANDOM$RANDOM | vncpasswd -f > $HOME/.vnc/passwd
+          chmod 0600 $HOME/.vnc/passwd
+          vncserver $DISPLAY -geometry 1024x768 -depth 16 -rfbport 7582
+        fi
       shell: bash
     - if: runner.os == 'Linux' || runner.os == 'macOS'
       run: |
