--- a/actions/setup/action.yaml
+++ b/actions/setup/action.yaml
@@ -94,7 +94,7 @@ runs:
       run: |
         sudo bash $GITHUB_ACTION_PATH/../../scripts/install_ubuntu_sys_req.sh
         echo "DISPLAY=:1" >> $GITHUB_ENV
-        if [ "${{ inputs.display }}" = "xvfb" ]; then
+        if [ "${{ inputs.display }}" = "turbovnc" ]; then
           wget https://phoenixnap.dl.sourceforge.net/project/turbovnc/2.2.5/turbovnc_2.2.5_amd64.deb
           sudo dpkg -i turbovnc_2.2.5_amd64.deb
           echo "/opt/TurboVNC/bin" >> $GITHUB_PATH
