--- a/actions/setup/action.yaml
+++ b/actions/setup/action.yaml
@@ -105,7 +105,7 @@ runs:
         if [ "${{ inputs.display }}" = "xvfb" ]; then
           Xvfb $DISPLAY -screen 0 1024x768x24 -ac +extension GLX +render -noreset &
           icewm &
-        else
+        elif [ "${{ inputs.display }}" = "turbovnc" ]; then
           mkdir $HOME/.vnc
           echo $RANDOM$RANDOM | vncpasswd -f > $HOME/.vnc/passwd
           chmod 0600 $HOME/.vnc/passwd
