--- a/actions/setup/action.yaml
+++ b/actions/setup/action.yaml
@@ -48,11 +48,13 @@ inputs:
       empty. If an exact match is not found, the latest tag is determined by semver x.y.z.
     required: false
   display:
-    description: |
-      Virtual display used to to open Sublime Text headlessly in Ubuntu. Possible values
-      are "xvfb" and "turbovnc".
+    description: internal and experimental only
     required: true
     default: xvfb
+  window-manager:
+    description: internal and experimental only
+    required: true
+    default: "icewm"
 
 runs:
   using: 'composite'
@@ -104,12 +106,18 @@ runs:
       run: |
         if [ "${{ inputs.display }}" = "xvfb" ]; then
           Xvfb $DISPLAY -screen 0 1024x768x24 -ac +extension GLX +render -noreset &
-          icewm &
+          if [ "${{ inputs.window-manager }}" = "icewm" ]; then
+            icewm &
+          fi
         elif [ "${{ inputs.display }}" = "turbovnc" ]; then
           mkdir $HOME/.vnc
           echo $RANDOM$RANDOM | vncpasswd -f > $HOME/.vnc/passwd
           chmod 0600 $HOME/.vnc/passwd
-          vncserver $DISPLAY -geometry 1024x768 -depth 24 -wm "icewm"
+          if [ "${{ inputs.window-manager }}" = "icewm" ]; then
+            vncserver $DISPLAY -geometry 1024x768 -depth 24 -wm "icewm"
+          else
+            vncserver $DISPLAY -geometry 1024x768 -depth 24
+          fi
         fi
       shell: bash
     - if: runner.os == 'Linux' || runner.os == 'macOS'
