--- a/actions/setup/action.yaml
+++ b/actions/setup/action.yaml
@@ -101,7 +101,9 @@ runs:
           sudo dpkg -i turbovnc_2.2.5_amd64.deb
           echo "/opt/TurboVNC/bin" >> $GITHUB_PATH
         fi
-        if [ "${{ inputs.window-manager }}" = "icewm" ]; then
+        if [ "${{ inputs.window-manager }}" = "xfce" ]; then
+          sudo apt-get install xfce4 xfce4-goodies
+        elif [ "${{ inputs.window-manager }}" = "icewm" ]; then
           sudo apt-get install icewm
         elif [ "${{ inputs.window-manager }}" = "fluxbox" ]; then
           sudo apt-get install fluxbox
@@ -112,7 +114,9 @@ runs:
         if [ "${{ inputs.display }}" = "xvfb" ]; then
           Xvfb $DISPLAY -screen 0 1024x768x24 -ac +extension GLX +render -noreset &
           sleep 1
-          if [ "${{ inputs.window-manager }}" = "icewm" ]; then
+          if [ "${{ inputs.window-manager }}" = "xfce" ]; then
+            nohup startxfce4 &
+          elif [ "${{ inputs.window-manager }}" = "icewm" ]; then
             nohup icewm &
           elif [ "${{ inputs.window-manager }}" = "fluxbox" ]; then
             nohup fluxbox &
@@ -121,7 +125,9 @@ runs:
           mkdir $HOME/.vnc
           echo $RANDOM$RANDOM | vncpasswd -f > $HOME/.vnc/passwd
           chmod 0600 $HOME/.vnc/passwd
-          if [ -n "${{ inputs.window-manager }}" ]; then
+          if [ "${{ inputs.window-manager }}" = "xfce" ]; then
+            vncserver $DISPLAY -geometry 1024x768 -depth 24 -wm "startxfce4"
+          elif [ -n "${{ inputs.window-manager }}" ]; then
             vncserver $DISPLAY -geometry 1024x768 -depth 24 -wm "${{ inputs.window-manager }}"
           else
             vncserver $DISPLAY -geometry 1024x768 -depth 24
