--- a/actions/setup/action.yaml
+++ b/actions/setup/action.yaml
@@ -54,7 +54,7 @@ inputs:
   window-manager:
     description: internal and experimental only
     required: true
-    default: "icewm"
+    default: "fluxbox"
 
 runs:
   using: 'composite'
@@ -96,25 +96,42 @@ runs:
       run: |
         sudo bash $GITHUB_ACTION_PATH/../../scripts/install_ubuntu_sys_req.sh
         echo "DISPLAY=:1" >> $GITHUB_ENV
-        if [ "${{ inputs.display }}" = "turbovnc" ]; then
+
+        if [ "${{ inputs.display }}" = "xvfb" ]; then
+          sudo apt-get install xvfb
+        elif [ "${{ inputs.display }}" = "turbovnc" ]; then
           wget https://phoenixnap.dl.sourceforge.net/project/turbovnc/2.2.5/turbovnc_2.2.5_amd64.deb
           sudo dpkg -i turbovnc_2.2.5_amd64.deb
           echo "/opt/TurboVNC/bin" >> $GITHUB_PATH
+        fi
+        if [ "${{ inputs.window-manager }}" = "xfce" ]; then
+          sudo apt-get install --no-install-recommends xfce4 xfce4-goodies dbus-x11
+        elif [ "${{ inputs.window-manager }}" = "icewm" ]; then
+          sudo apt-get install icewm
+        elif [ "${{ inputs.window-manager }}" = "fluxbox" ]; then
+          sudo apt-get install fluxbox
         fi
       shell: bash
     - if: runner.os == 'Linux'
       run: |
         if [ "${{ inputs.display }}" = "xvfb" ]; then
           Xvfb $DISPLAY -screen 0 1024x768x24 -ac +extension GLX +render -noreset &
-          if [ "${{ inputs.window-manager }}" = "icewm" ]; then
-            icewm &
+          sleep 1
+          if [ "${{ inputs.window-manager }}" = "xfce" ]; then
+            nohup startxfce4 &
+          elif [ "${{ inputs.window-manager }}" = "icewm" ]; then
+            nohup icewm &
+          elif [ "${{ inputs.window-manager }}" = "fluxbox" ]; then
+            nohup fluxbox &
           fi
         elif [ "${{ inputs.display }}" = "turbovnc" ]; then
           mkdir $HOME/.vnc
           echo $RANDOM$RANDOM | vncpasswd -f > $HOME/.vnc/passwd
           chmod 0600 $HOME/.vnc/passwd
-          if [ "${{ inputs.window-manager }}" = "icewm" ]; then
-            vncserver $DISPLAY -geometry 1024x768 -depth 24 -wm "icewm"
+          if [ "${{ inputs.window-manager }}" = "xfce" ]; then
+            vncserver $DISPLAY -geometry 1024x768 -depth 24 -wm "startxfce4"
+          elif [ -n "${{ inputs.window-manager }}" ]; then
+            vncserver $DISPLAY -geometry 1024x768 -depth 24 -wm "${{ inputs.window-manager }}"
           else
             vncserver $DISPLAY -geometry 1024x768 -depth 24
           fi
